added score for three pairs, refactored pair usage, cleaned findPatterns method